--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "sass": "^1.45.0",
     "sass-loader": "^12.4.0",
     "style-loader": "^3.3.1",
+    "uniqid": "^5.4.0",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1"
   }
