--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "style-loader": "^3.3.1",
     "uniqid": "^5.4.0",
     "webpack": "^5.65.0",
-    "webpack-cli": "^4.9.1"
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.7.2"
   }
 }
