--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest",
     "build": "webpack",
     "watch": "webpack --watch",
+    "server": "webpack serve",
     "start": "webpack serve --open"
   },
   "author": "",
